tg-3568 [P2] Fix no se visualizan los nombres de las columnas en componentes de problemas
(cherry picked from commit 3b5a3eb43286484be5742901b2bc429fe6a7fac5)

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -175,6 +175,12 @@
 				"SUCCESS_CONFIRMAR_POPUP": "El problema ha sido resuelto exitosamente",
 				"ERROR_CONFIRMAR_POPUP": "Ocurrió un error al resolver el problema",
 				"ACCEDER": "Acceder episodio",
+				"table-columns": {
+					"TYPE": "Problema",
+					"SEVERITY": "Severidad",
+					"START_DATE": "Desde",
+					"END_DATE": "Hasta"
+				},
 				"historical-problems": {
 					"NO_FILTERED_PROBLEMS": "No hay resultados para la búsqueda seleccionada",
 					"NO_HISTORICAL": "No existe informacion para mostrar",
