tg-3572 [Mejora] Agregar mensaje descriptivo al intentar confirmar una consulta sin severidad de problema

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -122,6 +122,7 @@ healthcare-professional.id.error.validation=Only can see own diaries
 ####### Outpatient #######
 problem.dates.not.after= End date cannot be before of start date
 outpatient.appointment.valid=Patient does not have an appointment
+outpatient.problem.severity.mandatory=Problem severity mandatory
 
 ####### Sector #######
 sector.parentOfItself= The parent sector must be different from the sector itself
