--- a/back-end/hospital-api/src/main/resources/messages_es.properties
+++ b/back-end/hospital-api/src/main/resources/messages_es.properties
@@ -128,6 +128,7 @@ healthcare-professional.affected-to-diary-agenda=Esta especialidad y profesional
 ####### Outpatient #######
 problem.dates.not.after= La fecha de fin no puede ser anterior al inicio del problema.
 outpatient.appointment.valid=El paciente no tiene un turno  asociado
+outpatient.problem.severity.mandatory=Severidad de problema obligatoria
 
 ####### Sector #######
 sector.parentOfItself= Un sector no puede ser padre de sí mismo
