tg-3486 [P2] Fix campo de fecha en vacuna no se valida

--- a/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/internacion/es-AR.json
@@ -359,6 +359,7 @@
 				"ADD": "Agregar vacuna",
 				"INMUNIZATION": "Vacuna",
 				"REGISTRY_DATE": "Fecha de vacunación",
+				"INVALID_DATE": "La fecha ingresada debe estar dentro del rango establecido por el calendario",
 				"save": {
 					"SUCCESS": "Una nueva vacuna se guardó exitosamente",
 					"ERROR": "Error al guardar nueva vacuna"
