tg-3957 [Mejora] Agregar texto "habitual" al titulo Medicación en nueva consulta y quitarlo en resumen

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -72,13 +72,13 @@
 					}
 				},
 				"medicaciones": {
-					"CONCEPT_LABEL": "Medicación",
+					"CONCEPT_LABEL": "Medicación habitual",
 					"DESCRIPCION": "Descripción",
 					"NOMBRE_MEDICACION": "Nombre de medicación",
 					"OBSERVACIONES": "Observaciones",
 					"SUSPENDIDO": "Suspendido",
 					"TABLE_TITLE": "Medicaciones registradas",
-					"TITLE": "Medicación"
+					"TITLE": "Medicación habitual"
 				},
 				"messages": {
 					"ERROR": "Error al guardar documento de nueva consulta ambulatoria",
