tg-3966 Se deben poder cargar valores con decimales en el campo 'Peso'
(cherry picked from commit 217b134b41479ce8637647b9c4d47dc383b132e3)

--- a/back-end/hospital-api/src/main/resources/messages_en.properties
+++ b/back-end/hospital-api/src/main/resources/messages_en.properties
@@ -75,7 +75,7 @@ diagnosis.main.repeated=Repeated main diagnosis
 diagnosis.secondary.repeated.principal= Diagnosis defined as principal
 diagnosis.repeated=Repeated diagnosis
 diagnosis.anthropometric.invalid=Anthropometric data invalid
-diagnosis.anthropometric.height.invalid=Height must have a value between 0 and 1000 cm
+diagnosis.anthropometric.height.invalid=Height must have an integer value between 0 and 1000 cm
 diagnosis.anthropometric.weight.invalid=Weight must have a value between 0 and 1000 kg
 procedures.repeated=Repeated procedures
 health.history.condition.repeated=Repeated records
