tg-4003 [FE] Crear opción en el menú de la webapp para acceder a la pantalla de Reportes

--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -13,7 +13,8 @@
 			"MIS_DATOS_PERSONALES": "Mis Datos Personales",
 			"PACIENTES": "Pacientes",
 			"PERFIL": "Mi cuenta",
-			"TURNOS": "Gestión de turnos"
+			"TURNOS": "Gestión de turnos",
+			"REPORTES": "Reportes"
 		}
 	},
 	"buttons": {
