tg-3953 Combio en el mensaje de confirmacion

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -82,7 +82,7 @@
 				},
 				"messages": {
 					"ERROR": "Error al guardar documento de nueva consulta ambulatoria",
-					"SUCCESS": "El documento de nueva consulta ambulatoria se guardó exitosamente"
+					"SUCCESS": "El documento de consulta ambulatoria se guardó exitosamente"
 				},
 				"problemas": {
 					"buttons": {
