tg-4097 [P2] Fix se puede seleccionar fecha de inicio posterior a la actual

--- a/front-end/apps/projects/hospital/src/assets/i18n/reportes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/reportes/es-AR.json
@@ -15,7 +15,8 @@
 			"SUBMIT": "Generar reporte",
 			"REQUIRED_FIELD": "Obligatorio *",
 			"errors": {
-				"FECHA_INICIO_MAX": "La fecha de inicio debe ser menor o igual a la fecha de fin",
+				"FECHA_INICIO_POSTERIOR_FECHA_FIN": "La fecha de inicio debe ser menor o igual a la fecha de fin",
+				"FECHA_INICIO_POSTERIOR_HOY": "La fecha de inicio debe ser anterior o igual a la fecha actual",
 				"FECHA_FIN_MIN": "La fecha de fin debe ser posterior o igual a la fecha de inicio"
 			}
 		}
