tg-2009 [P2] El campo "nro de documento" en pacientes puede completarse con espacios

--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -49,6 +49,7 @@
 		"MAX_DATE_TODAY": "La fecha no puede ser posterior al día de hoy",
 		"FORMAT_NUMERIC": "El valor debe ser numérico",
 		"FORMAT_NUMERIC_INTEGER": "El valor debe ser un número entero",
+		"FORMAT_WHITOUT_BLANK_SPACES":"El valor no puede contener espacios en blanco",
 		"YES": "Si",
 		"NO":"No"
 	},
