tg-4345 edita pop-up de turno, agrega opcion descargar informe

--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -71,6 +71,9 @@
 				"COVERAGE_DATA": "Cobertura Médica",
 				"UPDATE_SUCCESS": "Los datos se han modificado correctamente"
 			}
+		},
+		"report": {
+			"TITLE": "Descargar informe"
 		}
 	}
 }
