tg-4324 Fix y mejoras de FE - estilos, actualizacion de datos, traducciones

--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -66,6 +66,10 @@
 			"phoneNumber": {
 				"SUCCESS": "El teléfono se modificó correctamente",
 				"PHONE_NUMBER": "Teléfono"
+			},
+			"coverageData": {
+				"COVERAGE_DATA": "Cobertura Médica",
+				"UPDATE_SUCCESS": "La cobertura médica se modificó correctamente"
 			}
 		}
 	}
