tg-4427 turnos - mensaje generico al editar cobertura o telefono

--- a/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/turnos/es-AR.json
@@ -69,7 +69,7 @@
 			},
 			"coverageData": {
 				"COVERAGE_DATA": "Cobertura Médica",
-				"UPDATE_SUCCESS": "La cobertura médica se modificó correctamente"
+				"UPDATE_SUCCESS": "Los datos se han modificado correctamente"
 			}
 		}
 	}
