tg-4452  Se agrega un botón para escanear el código y abrir el pop-up

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -52,7 +52,8 @@
 				"BUTTON_ADD": "Crear paciente temporal",
 				"BUTTON_SEARCH": "Buscar",
 				"NO_IDENTITY": "No acredita identidad",
-				"TITLE": "Búsqueda / Creación de HC"
+				"TITLE": "Búsqueda / Creación de HC",
+				"BUTTON_SCAN": "Escanear código"
 			}
 		},
 		"new": {
