tg-4464. Creacion de formulario Registrar Vacuna previa

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -350,7 +350,9 @@
 						"CONDITION": "Condición o motivo",
 						"SCHEME": "Esquema",
 						"DOSE": "Dosis",
-						"LOT": "Lote"
+						"LOT": "Lote",
+						"INSTITUTION": "Institución",
+						"PROFFESIONAL": "Profesional"
 					},
 					"save": {
 						"SUCCESS": "Las vacunas aplicadas se guardaron exitosamente",
