tg-4534. Correcciones de estilos, cambio de nombres y eliminacion de la version anterior de la tabla historial de vacunacion

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -339,7 +339,8 @@
 					"professional": "Profesional",
 					"condition_motive":"Condición o motivo",
 					"scheme":"Esquema",
-					"tradename":"Nombre comercial"
+					"tradename":"Nombre comercial",
+					"not-info":"Sin Información"
 				}
 			},
 			"vacunas2": {
