tg-4453 Se agrega la lógica correspondiente para el procesamiento de los datos obtenidos a través del escaneo

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -53,7 +53,13 @@
 				"BUTTON_SEARCH": "Buscar",
 				"NO_IDENTITY": "No acredita identidad",
 				"TITLE": "Búsqueda / Creación de HC",
-				"BUTTON_SCAN": "Escanear código"
+				"scan":{
+					"BUTTON_SCAN": "Escanear código", 
+					"messages":{
+						"ERROR": "El escaneo no pudo completarse correctamente. Intente de nuevo o proceda a una búsqueda manual.",
+						"SUCCESS": "Resultados encontrados."
+					}
+				}
 			}
 		},
 		"new": {
