--- a/front-end/apps/projects/hospital/src/assets/i18n/odontologia/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/odontologia/es-AR.json
@@ -22,6 +22,23 @@
 					}
 				}
 			},
+			"alergias": {
+				"TITLE": "Alergias",
+				"ADD": "Agregar alergia",
+				"ALLERGY": "Alergia",
+				"CRITICALITY": "Criticidad",
+				"form": {
+					"REGISTRY_DATE": "Fecha registro"
+				},
+				"table": {
+					"TITLE": "Alergias registradas",
+					"columns": {
+						"ALLERGY": "Alergia",
+						"CRITICALITY": "Criticidad",
+						"REGISTRY_DATE": "Fecha registro"
+					}
+				}
+			},
 			"messages": {
 				"ERROR": "Error al guardar documento de nueva consulta odontologica",
 				"SUCCESS": "El documento de consulta odontológica se guardó exitosamente"
