--- a/front-end/apps/projects/hospital/src/assets/i18n/odontologia/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/odontologia/es-AR.json
@@ -39,6 +39,15 @@
 					}
 				}
 			},
+			"medicaciones": {
+				"CONCEPT_LABEL": "Medicación habitual",
+				"DESCRIPCION": "Descripción",
+				"NOMBRE_MEDICACION": "Nombre de medicación",
+				"OBSERVACIONES": "Observaciones",
+				"SUSPENDIDO": "Suspendido",
+				"TABLE_TITLE": "Medicaciones registradas",
+				"TITLE": "Medicación habitual"
+			},
 			"messages": {
 				"ERROR": "Error al guardar documento de nueva consulta odontologica",
 				"SUCCESS": "El documento de consulta odontológica se guardó exitosamente"
