--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -354,7 +354,10 @@
 						"DOSE": "Dosis",
 						"LOT": "Lote",
 						"INSTITUTION": "Institución",
-						"PROFESSIONAL": "Profesional"
+						"PROFESSIONAL": "Profesional",
+						"NOT_VACCINE_SELECTED_ERROR": "Debe seleccionar una vacuna",
+						"NOT_SCHEME_SELECTED_ERROR": "Si selecciona una condición, debe elegir un esquema",
+						"NOT_DOSE_SELECTED_ERROR": "Si selecciona un esquema, debe elegir una dosis"
 					}
 				}
 			}
