--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -333,14 +333,13 @@
 				"details": {
 					"DOSE": "Dosis",
 					"DATE": "Fecha",
-					"lotNumber": "Lote",
-					"name_commercial": "Nombre comercial",
-					"institution": "Institución",
-					"professional": "Profesional",
-					"condition_motive":"Condición o motivo",
-					"scheme":"Esquema",
-					"tradename":"Nombre comercial",
-					"not-info":"Sin Información"
+					"LOT_NUMBER": "Lote",
+					"INSTITUTION": "Institución",
+					"PROFESSIONAL": "Profesional",
+					"CONDITION_MOTIVE":"Condición o motivo",
+					"SCHEME":"Esquema",
+					"NO-INFO":"Sin información",
+					"NO-OBS":"Sin observaciones"
 				}
 			},
 			"vacunas2": {
