tg-4650 [FE] Crear servicio de nueva consulta de antecedentes personales

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -140,6 +140,22 @@
 					"ANTECEDENTES_FAMILIARES": "Antecedentes familiares",
 					"FECHA": "Fecha de registro"
 				},
+				"antecedentes-personales": {
+					"buttons": {
+						"ADD": "Agregar antecedente personal"
+					},
+					"table": {
+						"TITLE": "Antecedentes registrados",
+						"columns": {
+							"ANTECEDENTE_PERSONAL": "Antecedente",
+							"FECHA": "Fecha de registro"
+						}
+					},
+					"TITLE": "Antecedentes personales",
+					"ANTECEDENTES_PERSONALES": "Antecedentes personales",
+					"TIPO_DE_PROBLEMA": "Tipo de problema",
+					"FECHA": "Fecha de registro"
+				},
 				"datos-antropometricos": {
 					"TITLE": "Datos antropométricos",
 					"BLOOD_TYPE": "Grupo y factor sanguíneo",
