tg-4651.  Encabezados en la tabla de vacunas.

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -317,6 +317,10 @@
 				"TITLE": "Historial de vacunación",
 				"ADD": "Aplicar vacuna",
 				"DETAILS": "Ver detalle",
+				"NO-INFO":"No hay información para mostrar",
+				"NAME":"Nombre",
+				"DOSE":"Dosis",
+				"DATE":"Fecha",
 				"aplicar": {
 					"TITLE": "Aplicar vacuna",
 					"INMUNIZATION": "Vacuna",
