--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -32,7 +32,8 @@
 		"NO": "No",
 		"YES": "Si",
 		"SKIP": "Omitir",
-		"RESET": "Restablecer"
+		"RESET": "Restablecer",
+		"SELECT": "Seleccionar"
 	},
 	"forms": {
 		"REQUIRED": "El campo es requerido",
