tg-4588 Agrega conexion con endpoint para obtener consultas ambulatorias del paciente

--- a/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/pacientes/es-AR.json
@@ -109,6 +109,13 @@
 		"reports": {
 			"TITLE": "Informes",
 			"SELECT_CONSULTATIONS": "Seleccione consultas",
+			"table": {
+				"columns": {
+					"DATE": "Fecha",
+					"SPECIALTY": "Especialidad",
+					"PROFESSIONAL": "Profesional"
+				}
+			},
 			"SELECT_REPORT_TYPE": "Seleccione tipo de informe",
 			"buttons": {
 				"DOWNLOAD_REPORTS": "Descargar informes"
