--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -318,7 +318,7 @@
 				"ADD": "Aplicar vacuna",
 				"DETAILS": "Ver detalle",
 				"NO-INFO":"No hay información para mostrar",
-				"NAME":"Nombre",
+				"VACCINE":"Vacuna",
 				"DOSE":"Dosis",
 				"DATE":"Fecha",
 				"aplicar": {
