--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -75,7 +75,10 @@
 					"OBSERVACIONES": "Observaciones",
 					"SUSPENDIDO": "Suspendido",
 					"TABLE_TITLE": "Medicaciones registradas",
-					"TITLE": "Medicación habitual"
+					"TITLE": "Medicación habitual",
+					"STATE": "Estado",
+					"MEDICATION": "Medicación",
+					"ADD": "Agregar Medicación"
 				},
 				"messages": {
 					"ERROR": "Error al guardar documento de nueva consulta ambulatoria",
