tg-4809 [FE] El popup de campos sugeridos ahora es un componente de presentacion

--- a/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/es-AR.json
@@ -20,9 +20,11 @@
 	"buttons": {
 		"ADD": "Agregar",
 		"BACK": "Volver",
+		"BACK_AND_COMPLETE": "Regresar y completar",
 		"CANCEL": "Cancelar",
 		"CONTINUE": "Continuar",
 		"CONFIRM": "Confirmar",
+		"CONFIRM_ANYWAY": "Confirmar de todos modos",
 		"CLOSE": "Cerrar",
 		"DELETE": "Eliminar",
 		"SEARCH": "Buscar",
@@ -42,6 +44,7 @@
 		"INVALID_DATE": "La fecha ingresada no es válida",
 		"REQUIRING_FIELD_FOR_SEARCH": "Debe ingresar al menos un campo para la búsqueda",
 		"SEARCH_RESULTS": "Resultados de la búsqueda",
+		"SUGGESTED_FIELDS": "Se sugiere completar los siguientes campos",
 		"MIN_ERROR": "El valor no puede ser menor que {{min}}",
 		"MAX_ERROR": "El valor no puede ser mayor que {{max}}",
 		"MIN_TIME_ERROR": "La hora debe ser posterior a la hora: {{minTime}}",
