tg-5028. [FE] Creación del popup nueva consulta de enfermería.Agregar menu de seleccion.

--- a/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
+++ b/front-end/apps/projects/hospital/src/assets/i18n/ambulatoria/es-AR.json
@@ -23,6 +23,11 @@
 					"NUEVA_CONSULTA": "Nueva consulta"
 				}
 			},
+			"new-nursing-consultation":{
+				"TITLE": "Nueva consulta de enfermería",
+				"ASSOCIATED_PROBLEM":"Problema asociado",
+				"SPECIALTY": "Especialidad"
+			},
 			"nueva-consulta": {
 				"TITLE": "Nueva consulta",
 				"SUBTITLE": "Completa los siguientes datos.",
@@ -35,7 +40,7 @@
 				"PROBLEMA": "Problema de la consulta",
 				"RECOMENDADO": "*Recomendado",
 				"evolucion": {
-					"TITLE": "Evolucion",
+					"TITLE": "Evolución",
 					"DESCRIPCION": "Descripcion"
 				},
 				"errors": {
